// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckCardChips > renders correctly with check type 1`] = `
<v-chip-group-stub
  centeractive="false"
  class="align-center"
  column="false"
  direction="horizontal"
  disabled="false"
  filter="false"
  mandatory="false"
  modelvalue="true"
  multiple="false"
  nexticon="$next"
  previcon="$prev"
  scrolltoactive="false"
  selectedclass="v-chip--selected"
  showarrows="false"
  symbol="Symbol(vuetify:v-slide-group)"
  tag="div"
  valuecomparator="[Function]"
  variant="tonal"
>
  <evocon-v-chip-stub
    active="false"
    allowgrow="false"
    class="my-0"
    dark="false"
    disabled="false"
    error="false"
    icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
    iconclass=""
    id="approved-chip"
    imgsrc=""
    label="Done"
    size="default"
    type="primary"
    value="true"
  />
  <!--v-if-->
</v-chip-group-stub>
`;

exports[`CheckCardChips > renders correctly with yes/no multiple selection 1`] = `
<v-chip-group-stub
  centeractive="false"
  class="align-center mb-2"
  column="false"
  direction="horizontal"
  disabled="false"
  filter="false"
  mandatory="false"
  multiple="false"
  nexticon="$next"
  previcon="$prev"
  scrolltoactive="false"
  selectedclass=""
  showarrows="false"
  symbol="Symbol(vuetify:v-slide-group)"
  tag="div"
  valuecomparator="[Function]"
  variant="tonal"
>
  <evocon-v-chip-stub
    active="false"
    allowgrow="false"
    class="my-0"
    dark="false"
    disabled="false"
    error="false"
    icon="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z"
    iconclass=""
    id="add-yes-chip"
    imgsrc=""
    label="Yes"
    size="default"
    type="neutral"
  />
  <evocon-v-chip-stub
    active="false"
    allowgrow="false"
    class="my-0"
    dark="false"
    disabled="false"
    error="false"
    icon="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z"
    iconclass=""
    id="add-no-chip"
    imgsrc=""
    label="No"
    size="default"
    type="neutral"
  />
</v-chip-group-stub>
`;

exports[`CheckCardChips > renders correctly with yes/no single selection 1`] = `
<v-chip-group-stub
  centeractive="false"
  class="align-center"
  column="false"
  direction="horizontal"
  disabled="false"
  filter="false"
  mandatory="false"
  modelvalue="true"
  multiple="false"
  nexticon="$next"
  previcon="$prev"
  scrolltoactive="false"
  selectedclass="v-chip--selected"
  showarrows="false"
  symbol="Symbol(vuetify:v-slide-group)"
  tag="div"
  valuecomparator="[Function]"
  variant="tonal"
>
  <evocon-v-chip-stub
    active="false"
    allowgrow="false"
    class="my-0"
    dark="false"
    disabled="false"
    error="false"
    icon="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z"
    iconclass=""
    id="approved-chip"
    imgsrc=""
    label="Yes"
    size="default"
    type="primary"
    value="true"
  />
  <evocon-v-chip-stub
    active="false"
    allowgrow="false"
    class="my-0"
    dark="false"
    disabled="false"
    error="false"
    icon="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z"
    iconclass=""
    id="disapproved-chip"
    imgsrc=""
    label="No"
    size="default"
    type="secondary"
    value="false"
  />
</v-chip-group-stub>
`;
